--- a/Protein_Ligand_Molecular_Dynamic_Simulation.ipynb
+++ b/Protein_Ligand_Molecular_Dynamic_Simulation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMnxR94jqpnosaLkRKSfKvy",
+      "authorship_tag": "ABX9TyOonF2CaaaEPUPAFWkqTZ2l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -130,6 +130,64 @@
       ],
       "metadata": {
         "id": "DIfoBw3aOBl2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title **Install dependencies**\n",
+        "#@markdown It will take a few minutes, please, drink a coffee and wait. ;-)\n",
+        "# install dependencies\n",
+        "import subprocess\n",
+        "import sys\n",
+        "subprocess.run(\"rm -rf /usr/local/conda-meta/pinned\", shell=True)\n",
+        "subprocess.run(\"mamba install -c conda-forge ambertools -y\", shell=True)\n",
+        "import pytraj as pt\n",
+        "subprocess.run(\"pip -q install py3Dmol\", shell=True)\n",
+        "subprocess.run(\"pip install git+https://github.com/pablo-arantes/biopandas\", shell=True)\n",
+        "subprocess.run(\"mamba install openmm pdbfixer -y\", shell=True)\n",
+        "subprocess.run(\"mamba install openmmforcefields -c conda-forge -y\", shell=True)\n",
+        "subprocess.run(\"pip install prolif==1.1.0\", shell=True)\n",
+        "subprocess.run(\"mamba install -c conda-forge openbabel -y\", shell=True)\n",
+        "subprocess.run(\"mamba install -c conda-forge parmed -y\", shell=True)\n",
+        "subprocess.run(\"pip install --upgrade MDAnalysis==2.4.2\", shell=True)\n",
+        "\n",
+        "#load dependencies\n",
+        "from openmm import app, unit\n",
+        "from openmm.app import HBonds, NoCutoff, PDBFile\n",
+        "from openff.toolkit.topology import Molecule, Topology\n",
+        "from openff.toolkit.typing.engines.smirnoff import ForceField\n",
+        "from openff.toolkit.utils import get_data_file_path\n",
+        "import parmed as pmd\n",
+        "from biopandas.pdb import PandasPdb\n",
+        "import openmm as mm\n",
+        "from openmm import *\n",
+        "from openmm.app import *\n",
+        "from openmm.unit import *\n",
+        "import os\n",
+        "import urllib.request\n",
+        "import numpy as np\n",
+        "import MDAnalysis as mda\n",
+        "import py3Dmol\n",
+        "import pytraj as pt\n",
+        "import platform\n",
+        "import scipy.cluster.hierarchy\n",
+        "from scipy.spatial.distance import squareform\n",
+        "import scipy.stats as stats\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd\n",
+        "from scipy.interpolate import griddata\n",
+        "import seaborn as sb\n",
+        "from statistics import mean, stdev\n",
+        "from pytraj import matrix\n",
+        "from matplotlib import colors\n",
+        "from IPython.display import set_matplotlib_formats\n",
+        "# !wget  https://raw.githubusercontent.com/openforcefield/openff-forcefields/master/openforcefields/offxml/openff_unconstrained-2.0.0.offxml"
+      ],
+      "metadata": {
+        "id": "xmlglqfzSdbM"
       },
       "execution_count": null,
       "outputs": []
